--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>app-demo</title>
+    <!-- <link rel="icon" href="<%= BASE_URL %>favicon.ico"> -->
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <title>LatteMusic</title>
+    <!-- <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css"> -->
+    
   </head>
   <body>
     <noscript>
@@ -14,4 +17,5 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <!-- <script src="https://unpkg.com/element-ui/lib/index.js"></script> -->
 </html>
