--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <title>LatteMusic</title>
     <!-- <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css"> -->
+    <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
     
   </head>
   <body>
