--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,6 @@
     <title>LatteMusic</title>
     <!-- <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css"> -->
     <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
-    
   </head>
   <body>
     <noscript>
@@ -19,4 +18,5 @@
     <!-- built files will be auto injected -->
   </body>
   <!-- <script src="https://unpkg.com/element-ui/lib/index.js"></script> -->
+  <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
 </html>
